unpackaged/main/default/objects/Trade_Error_Impacted_Account__c/Trade_Error_Impacted_Account__c.object-meta.xml
<CustomObject>
    <label>Trade Error Impacted Account</label>
    <nameField>
        <displayFormat>TEIA-{000000}</displayFormat>
        <label>Trade Error Impacted Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Error Impacted Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>