unpackaged/main/default/objects/Trade_Error_Impacted_Account__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account FinServ</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Trade Error Impacted Accounts</relationshipLabel>
    <relationshipName>Trade_Error_Impacted_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>