unpackaged/main/default/objects/Trade_Error_Impacted_Account__c/fields/Trade_Error_Amount__c.field-meta.xml
<CustomField>
    <fullName>Trade_Error_Amount__c</fullName>
    <label>Trade Error Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>