unpackaged/main/default/objects/Trade_Error_Impacted_Account__c/fields/Trade_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Trade_Error_Log__c</fullName>
    <label>Trade Error Log</label>
    <referenceTo>Trade_Error_Log__c</referenceTo>
    <relationshipLabel>Trade Error Impacted Accounts</relationshipLabel>
    <relationshipName>Trade_Error_Impacted_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>